Добавяне на uninstall.txt и make-pkg, премахване на new project nemo action

--- a/locales/bg-BG.json
+++ b/locales/bg-BG.json
@@ -56,8 +56,12 @@
 		"value": "Изберете команда"
 	},
 	{
-		"key": "Actions",
-		"value": "Действия"
+		"key": "Actions (buttons)",
+		"value": "Действия (бутони)"
+	},
+	{
+		"key": "Actions (list)",
+		"value": "Действия (списък)"
 	},
 	{
 		"key": "Action",
