Improve installation and add a manual

--- a/locales/bg-BG.json
+++ b/locales/bg-BG.json
@@ -40,8 +40,8 @@
 		"value": "незададено"
 	},
 	{
-		"key": "Usage:",
-		"value": "Употреба:"
+		"key": "Usage",
+		"value": "Употреба"
 	},
 	{
 		"key": "Commands:",
